Update 10. Nmap 2.md

--- a/4. Network Reconnaissance Scanning/10. Nmap 2.md
+++ b/4. Network Reconnaissance Scanning/10. Nmap 2.md
@@ -1,6 +1,6 @@
 
 # **IP (Internet Protocol) Header Fields and Their Role in Nmap Scans**
-Nmap manipulates key IP header fields to perform various scan types, optimize detection, and evade security controls. Below is a detailed explanation of important IP header fields and how Nmap uses them:
+> Nmap manipulates key IP header fields to perform various scan types, optimize detection, and evade security controls. Below is a detailed explanation of important IP header fields and how Nmap uses them:
 
 | **IP Header Field**              | **Description & Role in Nmap**                                                                                                                                      | **Example Nmap Usage**                                   |
 |----------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------|
@@ -18,8 +18,7 @@ Nmap manipulates key IP header fields to perform various scan types, optimize de
 | **12. Destination Address**      | IP of the target system(s). Supports single and subnet notation.                                                                                                   | Examples: nmap 192.168.1.1 or nmap 192.168.1.0/24       |
 | **13. Options**                  | Rare extended features like Record Route, Timestamp. Can increase header size—uncommonly used but supported for advanced scans.                                   | Custom options: nmap –ip-options '\x07\x27\x08\x08\x08\x08' 192.168.1.1 |
 
----
-**Additional Details and Usage Patterns**
+## **Additional Details and Usage Patterns**
 
 * **Fragmentation for Evasion:**  
 By breaking packets into fragments (`-f`), Nmap attempts to bypass some firewalls and IDS/IPS devices that don’t properly inspect fragmented packets. Fragment offset and flags assist this evasion.
@@ -36,8 +35,7 @@ This IP protocol scan sends raw IP packets with different protocol numbers to di
 * **Packet Size and Options:**  
 Manipulating the size (total length field) and options enables Nmap to craft unusual or custom packets for fingerprinting or firewall evasion.
 
----
-**Summary Table of Nmap IP Header Field Usage**
+## **Summary Table of Nmap IP Header Field Usage**
 
 | IP Header Field         | How Nmap Uses It                                    | Typical Commands / Options   |
 |------------------------|-----------------------------------------------------|-----------------------------|
@@ -77,9 +75,7 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 | **Urgent Pointer**         | Only used if URG flag is set; rarely in scanning.                                                               | (rare)                                                       |
 | **Options**                | Supports features like MSS, Timestamps, or SACK. Nmap allows custom options.                                    | nmap --tcp-options 02:04:4000 192.168.1.1                    |
 
----
-
-**How Nmap Uses TCP Header Fields**
+## **How Nmap Uses TCP Header Fields**
 
 - **Source Port:**  
   - You can set the source port manually with `--source-port`. This can help evade firewalls performing special handling on trusted ports (like port 53 for DNS).
@@ -107,11 +103,11 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 
 ---
 
-**UDP Header Fields & Their Role in Nmap Scans**
+# **UDP Header Fields & Their Role in Nmap Scans**
 
 > The User Datagram Protocol (UDP) is a connectionless protocol at the transport layer, known for its speed and simplicity, but lacks reliability mechanisms found in TCP. This affects how Nmap conducts scans and the type of information it gathers.
 
-**UDP Header Fields and Their Functions**
+## **UDP Header Fields and Their Functions**
 
 | Field              | Size (Bits) | Description                                        | Nmap Relevance                                                                |
 |--------------------|-------------|----------------------------------------------------|-------------------------------------------------------------------------------|
@@ -120,9 +116,8 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 | Length             | 16          | Total size of UDP header plus data                 | Used in fragmentation and evasion techniques                                  |
 | Checksum           | 16          | Validates integrity of header and data             | May be set incorrectly for stealth/evasion                                    |
 
----
 
-**How Nmap Uses UDP Header Fields in Scans**
+## **How Nmap Uses UDP Header Fields in Scans**
 
 **Source Port:**
 - You can specify the source port when scanning, which can help bypass firewall rules that allow traffic from "trusted" ports:
@@ -144,15 +139,13 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 **Checksum:**
 - Used for error checking, but Nmap might deliberately set incorrect values in rare evasion scenarios.
 
----
-
-**Notes on UDP Scanning in Nmap**
+## **Notes on UDP Scanning in Nmap**
 
 - UDP scanning (`-sU`) is typically slower and less reliable than TCP scanning.
 - UDP is stateless; many services do not respond unless given the exact correct packet, and silent drops (no response) are common.
 - Nmap may retransmit UDP probes and interpret ICMP error messages (like "Port Unreachable") to confirm closed ports.
 
-**Summary:**
+## **Summary:**
 Nmap manipulates UDP header fields—source port, destination port, length, and checksum—primarily for targeted scans, evasion tactics, and to adapt to stateless communication. This enables the discovery of UDP services and vulnerabilities, despite the protocol's inherent limitations and the scanning challenges it presents.
 
 ---
@@ -161,7 +154,7 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 
 > ICMP operates at the network (Layer 3) of the OSI model and is crucial for network diagnostics, error reporting, and control—not for data transfer. Nmap uses ICMP extensively to map networks and assess hosts and security devices.
 
-**ICMP Header Fields**
+## **ICMP Header Fields**
 
 | Field           | Size (Bits) | Description                                                                               |
 |-----------------|-------------|-------------------------------------------------------------------------------------------|
@@ -171,8 +164,7 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 | Rest of Header  | 32          | Varies; can include sequence numbers, identifiers, timestamps, etc.                       |
 
 
-
-**Common ICMP Message Types and Use Cases**
+## **Common ICMP Message Types and Use Cases**
 
 | Type | Code  | Message                        | Typical Use Case                                                |
 |------|-------|-------------------------------|-----------------------------------------------------------------|
@@ -185,7 +177,7 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 | 12   | 0-1   | Parameter Problem             | Indicates malformed IP header                                   |
 
 
-**How Nmap Uses ICMP**
+## **How Nmap Uses ICMP**
 
 - **Echo Request (8) / Echo Reply (0):**
   - Used in Nmap's ping sweeps (`-sn`), allowing rapid discovery of live hosts on a network.
@@ -199,15 +191,12 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 - **Other Codes/Types:**
   - Help Nmap detect network or host issues, recognize route changes, or spot filtering along the scan path.
 
-**Summary:**
+## **Summary:**
 ICMP gives Nmap the ability to perform effective network mapping, device discovery, and route analysis, making it an essential protocol for both administrators and security testers. Nmap leverages ICMP message types and header fields strategically to gather information and adapt to different network conditions and protections.
 
 ---
 
-
-
-
-# **Protocol Header Fields Manipulation in Nmap**
+## **Protocol Header Fields Manipulation in Nmap**
 
 | Protocol | Header Field        | Nmap Usage Description                                                 |
 |----------|---------------------|-----------------------------------------------------------------------|
@@ -225,7 +214,6 @@ ICMP gives Nmap the ability to perform effective network mapping, device discove
 | ICMP     | Code                | Provides additional message info                                      |
 
 ---
-
 
 ## TCP Three-Way Handshake in Nmap Scans
 
