Update 10. Nmap 2.md

--- a/4. Network Reconnaissance Scanning/10. Nmap 2.md
+++ b/4. Network Reconnaissance Scanning/10. Nmap 2.md
@@ -2,6 +2,9 @@
 # **IP (Internet Protocol) Header Fields and Their Role in Nmap Scans**
 > Nmap manipulates key IP header fields to perform various scan types, optimize detection, and evade security controls. Below is a detailed explanation of important IP header fields and how Nmap uses them:
 
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/IP%20HEADER.png" alt="IP HEADER">
+
+
 | **IP Header Field**              | **Description & Role in Nmap**                                                                                                                                      | **Example Nmap Usage**                                   |
 |----------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------|
 | **1. Version**                   | IP packet version—IPv4 (value 4) by default; IPv6 supported (-6).                                                                                                  | nmap -6 2001:db8::1 (IPv6 scan)                         |
@@ -55,6 +58,9 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 
 > The TCP header contains several fields that Nmap manipulates or analyzes to perform various scanning and evasion techniques. Understanding each field, and how Nmap leverages it, is key to understanding both basic and advanced Nmap scans:
 
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP%20HEADER.png" alt="TCP HEADER">
+
+
 | Field                      | Description & Nmap Usage                                                                                       | Example Nmap Usage                                           |
 |----------------------------|----------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------|
 | **Source Port**            | Port used by the sender. Can be manually set for evasion or bypassing filters.                                 | nmap --source-port 53 192.168.1.1                            |
@@ -107,6 +113,9 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 
 > The User Datagram Protocol (UDP) is a connectionless protocol at the transport layer, known for its speed and simplicity, but lacks reliability mechanisms found in TCP. This affects how Nmap conducts scans and the type of information it gathers.
 
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/UDP%20HEADER.png" alt="UDP HEADER">
+
+
 ## **UDP Header Fields and Their Functions**
 
 | Field              | Size (Bits) | Description                                        | Nmap Relevance                                                                |
@@ -153,6 +162,9 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 # **Internet Control Message Protocol (ICMP) and Its Role in Nmap Scans**
 
 > ICMP operates at the network (Layer 3) of the OSI model and is crucial for network diagnostics, error reporting, and control—not for data transfer. Nmap uses ICMP extensively to map networks and assess hosts and security devices.
+
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/ICMP%20HEADER.png" alt="ICMP HEADER">
+
 
 ## **ICMP Header Fields**
 
