Update 10. Nmap 2.md

--- a/4. Network Reconnaissance Scanning/10. Nmap 2.md
+++ b/4. Network Reconnaissance Scanning/10. Nmap 2.md
@@ -7,19 +7,19 @@
 
 | **IP Header Field**              | **Description & Role in Nmap**                                                                                                                                      | **Example Nmap Usage**                                   |
 |----------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------|
-| **1. Version**                   | IP packet version—IPv4 (value 4) by default; IPv6 supported (-6).                                                                                                  | nmap -6 2001:db8::1 (IPv6 scan)                         |
-| **2. Header Length (IHL)**       | Length of the IP header in 32-bit words (default is 5 = 20 bytes); increases with options.                                                                         | Modified in raw protocol scans (–sO).                   |
-| **3. Type of Service (ToS)/ DSCP** | Quality of Service bits affecting packet handling/routing. Can be customized to influence traffic treatment or evade detection.                                    | nmap –ip-options '\x03' 192.168.1.1                     |
-| **4. Total Length (Datagram Size)** | Combined header and payload length in bytes. Larger packets may require fragmentation.                                                                             | Packet fragmentation for firewall evasion with -f.       |
-| **5. Identification**            | 16-bit field to uniquely identify packet fragments for reassembly. Useful in fragmentation evasion or traffic inspection.                                           | Visible in packet sniffing; manipulation occurs with fragmentation enabled. |
-| **6. Flags**                     | Control fragmentation; DF (Don’t Fragment), MF (More Fragments).                                                                                                   | Fragmented scans with -f use these flags to circumvent filters. |
-| **7. Fragment Offset**           | Position of a fragment's data relative to the original packet.                                                                                                     | Packet fragmentation can confuse some IDS/firewalls.     |
-| **8. Time To Live (TTL)**        | Limits packet lifetime (hops). Decremented at each router, preventing routing loops. Used for OS detection and trace.                                              | Set TTL to control detection or analyze network hops (--ttl). |
-| **9. Protocol**                  | Specifies upper layer protocol (1=ICMP, 6=TCP, 17=UDP). Used in protocol scans.                                                                                    | Protocol scan: nmap -sO 192.168.1.1                     |
-| **10. Header Checksum**          | Validates the integrity of the IP header; recalculated with header changes.                                                                                        | Calculated automatically, no user manipulation.          |
-| **11. Source Address**           | IP address of the sender. Can be spoofed to conceal scan origin.                                                                                                  | IP spoofing stealth: nmap -S 192.168.1.100 192.168.1.1  |
-| **12. Destination Address**      | IP of the target system(s). Supports single and subnet notation.                                                                                                   | Examples: nmap 192.168.1.1 or nmap 192.168.1.0/24       |
-| **13. Options**                  | Rare extended features like Record Route, Timestamp. Can increase header size—uncommonly used but supported for advanced scans.                                   | Custom options: nmap –ip-options '\x07\x27\x08\x08\x08\x08' 192.168.1.1 |
+| **Version**                   | IP packet version—IPv4 (value 4) by default; IPv6 supported (-6).                                                                                                  | nmap -6 2001:db8::1 (IPv6 scan)                         |
+| **Header Length (IHL)**       | Length of the IP header in 32-bit words (default is 5 = 20 bytes); increases with options.                                                                         | Modified in raw protocol scans (–sO).                   |
+| **Type of Service (ToS)/ DSCP** | Quality of Service bits affecting packet handling/routing. Can be customized to influence traffic treatment or evade detection.                                    | nmap –ip-options '\x03' 192.168.1.1                     |
+| **Total Length (Datagram Size)** | Combined header and payload length in bytes. Larger packets may require fragmentation.                                                                             | Packet fragmentation for firewall evasion with -f.       |
+| **Identification**            | 16-bit field to uniquely identify packet fragments for reassembly. Useful in fragmentation evasion or traffic inspection.                                           | Visible in packet sniffing; manipulation occurs with fragmentation enabled. |
+| **Flags**                     | Control fragmentation; DF (Don’t Fragment), MF (More Fragments).                                                                                                   | Fragmented scans with -f use these flags to circumvent filters. |
+| **Fragment Offset**           | Position of a fragment's data relative to the original packet.                                                                                                     | Packet fragmentation can confuse some IDS/firewalls.     |
+| **Time To Live (TTL)**        | Limits packet lifetime (hops). Decremented at each router, preventing routing loops. Used for OS detection and trace.                                              | Set TTL to control detection or analyze network hops (--ttl). |
+| **Protocol**                  | Specifies upper layer protocol (1=ICMP, 6=TCP, 17=UDP). Used in protocol scans.                                                                                    | Protocol scan: nmap -sO 192.168.1.1                     |
+| **Header Checksum**          | Validates the integrity of the IP header; recalculated with header changes.                                                                                        | Calculated automatically, no user manipulation.          |
+| **Source Address**           | IP address of the sender. Can be spoofed to conceal scan origin.                                                                                                  | IP spoofing stealth: nmap -S 192.168.1.100 192.168.1.1  |
+| **Destination Address**      | IP of the target system(s). Supports single and subnet notation.                                                                                                   | Examples: nmap 192.168.1.1 or nmap 192.168.1.0/24       |
+| **Options**                  | Rare extended features like Record Route, Timestamp. Can increase header size—uncommonly used but supported for advanced scans.                                   | Custom options: nmap –ip-options '\x07\x27\x08\x08\x08\x08' 192.168.1.1 |
 
 ## **Additional Details and Usage Patterns**
 
