--- a/4. Network Reconnaissance Scanning/09. Nmap Protocol Header.md
+++ b/4. Network Reconnaissance Scanning/09. Nmap Protocol Header.md
@@ -21,7 +21,7 @@
 # **IP (Internet Protocol) Header Fields and Their Role in Nmap Scans**
 > Nmap manipulates key IP header fields to perform various scan types, optimize detection, and evade security controls. Below is a detailed explanation of important IP header fields and how Nmap uses them:
 
-<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/IP.png" alt="IP HEADER">
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/4.%20Network%20Reconnaissance%20Scanning/Image/IP.png" alt="IP">
 
 
 | **IP Header Field**              | **Description & Role in Nmap**                                                                                                                                      | **Example Nmap Usage**                                   |
@@ -77,7 +77,7 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 
 > The TCP header contains several fields that Nmap manipulates or analyzes to perform various scanning and evasion techniques. Understanding each field, and how Nmap leverages it, is key to understanding both basic and advanced Nmap scans:
 
-<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP.png" alt="TCP HEADER">
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP.png" alt="TCP">
 
 
 | Field                      | Description & Nmap Usage                                                                                       | Example Nmap Usage                                           |
@@ -132,7 +132,7 @@ Manipulating the size (total length field) and options enables Nmap to craft unu
 
 > The User Datagram Protocol (UDP) is a connectionless protocol at the transport layer, known for its speed and simplicity, but lacks reliability mechanisms found in TCP. This affects how Nmap conducts scans and the type of information it gathers.
 
-<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/UDP.png" alt="UDP HEADER">
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/4.%20Network%20Reconnaissance%20Scanning/Image/UDP.png" alt="UDP">
 
 
 ## **UDP Header Fields and Their Functions**
@@ -182,7 +182,7 @@ Nmap manipulates UDP header fields—source port, destination port, length, and 
 
 > ICMP operates at the network (Layer 3) of the OSI model and is crucial for network diagnostics, error reporting, and control—not for data transfer. Nmap uses ICMP extensively to map networks and assess hosts and security devices.
 
-<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/ICMP.png" alt="ICMP HEADER">
+<img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/4.%20Network%20Reconnaissance%20Scanning/Image/ICMP.png" alt="ICMP">
 
 
 ## **ICMP Header Fields**
