--- a/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
+++ b/4. Network Reconnaissance Scanning/08. Nmap (Network Mapper).md
@@ -69,7 +69,7 @@ nmap -sV 192.168.1.1
 ```
 ---
 
-<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/Nmap.png" alt="Nmap Image">
+<img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/NMAP.png" alt="Nmap Image">
 
 ---
 # Network Network Layer (Layer 3 – OSI Model)
