Update 10. TCP Three-way-handshake.md

--- a/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
+++ b/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
@@ -1,1 +1,145 @@
-fdkjjdk
+
+## **TCP-Three-Way-Handshake-Process**
+
+ > The TCP three-way handshake is the fundamental mechanism used to establish a reliable TCP connection between a client and a server. It ensures both sides are synchronized and ready to communicate.
+
+<div align="center">
+  <img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP%20Three%20way%20handshake.jpg" alt="TCP Three-Way Handshake" width="600">
+</div>
+
+---
+
+### **Step 1: SYN (Synchronize) Packet**
+
+* The client initiates the connection by sending a TCP packet with the SYN flag set.
+* This packet contains an Initial Sequence Number (ISN) chosen by the client, which will be used to track the order of data it sends.
+* **Purpose:** Request to open a connection.
+
+---
+
+### **Step 2: SYN-ACK (Synchronize-Acknowledge) Packet**
+
+* The server responds to the client's SYN packet with a TCP packet that has both SYN and ACK flags set.
+* The SYN flag means the server agrees to establish a connection.
+* The ACK acknowledges the client's ISN by setting the acknowledgment number to **client's ISN + 1**.
+* The server also includes its own ISN for the connection.
+
+---
+
+### **Step 3: ACK (Acknowledge) Packet**
+
+* The client responds back with a TCP packet with the ACK flag set.
+* The acknowledgment number is set to **server's ISN + 1**, acknowledging the server's SYN-ACK.
+* After sending this packet, the connection is established, and both sides can begin data transmission.
+
+---
+
+### **Why Is the Three-Way Handshake Important?**
+
+* **Reliability:** Both client and server confirm they are ready to communicate, synchronize their sequence numbers, and establish connection parameters.
+* **Connection Establishment:** Without this handshake, TCP wouldn't reliably ensure both parties are prepared, risking lost or misordered data.
+* **Duplicate Data Prevention:** Sequence and acknowledgment numbers help manage data order, ensuring duplicates are detected and avoided.
+
+---
+
+### **Summary Table**
+
+| Step | Packet Type | Flags Set | Purpose                                       |
+| ---- | ----------- | --------- | --------------------------------------------- |
+| 1    | SYN         | SYN       | Client requests connection; sends ISN         |
+| 2    | SYN-ACK     | SYN + ACK | Server acknowledges client, sends its own ISN |
+| 3    | ACK         | ACK       | Client acknowledges server's SYN-ACK          |
+
+> This handshake underpins TCP's ability to provide a reliable, ordered, connection-oriented communication channel, making it fundamental to network communication and also to many **Nmap scanning techniques** that analyze or mimic these packet exchanges.
+
+---
+
+## **TLS Handshake Process**
+
+The TLS (Transport Layer Security) handshake is a crucial process that establishes a secure, encrypted connection between a client and a server. This handshake involves several steps where both parties agree on protocols, authenticate each other, and generate session keys for encryption.
+
+---
+
+### **TLS Handshake Process Steps**
+
+#### 1. **Client Hello**
+
+* The client sends a "Client Hello" message to the server.
+* This message contains the TLS version supported by the client, a list of supported cipher suites (cryptographic algorithms), and a random value called the **Client Random**.
+
+#### 2. **Server Hello**
+
+* The server responds with a "Server Hello" message.
+* This includes the TLS version selected, the chosen cipher suite, and a random value called the **Server Random**.
+* The server also sends its **digital certificate**, which contains its public key and identity information to authenticate itself.
+
+#### 3. **Server Authentication and Certificate Verification**
+
+* The client verifies the server's certificate against trusted Certificate Authorities (CAs).
+* If required, the server may also request the client’s certificate for **mutual authentication**.
+
+#### 4. **Client Key Exchange (Pre-Master Secret)**
+
+* The client generates a **pre-master secret**, a random number used to create the **master secret**.
+* It encrypts this with the server's **public key** and sends it to the server.
+
+#### 5. **Server Decrypts Pre-Master Secret**
+
+* The server uses its **private key** to decrypt the pre-master secret.
+* Now both client and server share the same pre-master secret.
+
+#### 6. **Session Keys Generation**
+
+* Both parties compute the same **master secret** using:
+
+  * Client Random
+  * Server Random
+  * Pre-Master Secret
+* From this, **symmetric session keys** are derived for encrypting and decrypting data.
+
+#### 7. **Change Cipher Spec**
+
+* The client sends a **"Change Cipher Spec"** message indicating future messages will be encrypted.
+* Then it sends a **"Finished"** message encrypted with the session key.
+
+#### 8. **Server Change Cipher Spec and Finished**
+
+* The server also sends its **"Change Cipher Spec"** message and encrypted **"Finished"** message.
+* Once verified, the handshake is complete.
+
+#### 9. **Secure Encrypted Communication Begins**
+
+* Both parties now securely exchange data using symmetric encryption.
+
+---
+
+### **Summary Table of TLS Handshake Steps**
+
+| Step                                    | Description                                                          |
+| --------------------------------------- | -------------------------------------------------------------------- |
+| 1. Client Hello                         | Client sends supported TLS version, cipher suites, and Client Random |
+| 2. Server Hello                         | Server responds with selection and Server Random, sends certificate  |
+| 3. Certificate Validation               | Client authenticates server's certificate                            |
+| 4. Client Key Exchange                  | Client sends encrypted pre-master secret                             |
+| 5. Server Decrypts Secret               | Server decrypts pre-master secret                                    |
+| 6. Session Key Creation                 | Both create master secret and session keys                           |
+| 7. Client Change Cipher Spec & Finished | Client signals encryption readiness, sends finished message          |
+| 8. Server Change Cipher Spec & Finished | Server signals encryption readiness, sends finished message          |
+| 9. Encrypted Communication              | Secure data exchange begins                                          |
+
+---
+
+### **Notes**
+
+* **TLS 1.3** simplifies this process by reducing round trips and eliminating some steps, improving speed and security.
+* The TLS handshake ensures **confidentiality, integrity, and authentication** between client and server during communication.
+* This handshake is **fundamental** in securing:
+
+  * HTTPS connections
+  * Email servers
+  * VPNs
+  * Other secure communication channels over networks.
+
+---
+
+Let me know if you want **color-coded version**, **PDF**, or GitHub-ready Markdown formatting.
