Update 10. TCP Three-way-handshake.md

--- a/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
+++ b/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
@@ -1,5 +1,5 @@
 
-## **TCP-Three-Way-Handshake-Process**
+# **TCP-Three-Way-Handshake-Process** 
 
  > The TCP three-way handshake is the fundamental mechanism used to establish a reliable TCP connection between a client and a server. It ensures both sides are synchronized and ready to communicate.
 
@@ -54,7 +54,7 @@
 
 ---
 
-## **TLS Handshake Process**
+# **TLS (Transport Layer Security) Handshake Process**
 
 The TLS (Transport Layer Security) handshake is a crucial process that establishes a secure, encrypted connection between a client and a server. This handshake involves several steps where both parties agree on protocols, authenticate each other, and generate session keys for encryption.
 
@@ -141,5 +141,3 @@ The TLS (Transport Layer Security) handshake is a crucial process that establish
   * Other secure communication channels over networks.
 
 ---
-
-Let me know if you want **color-coded version**, **PDF**, or GitHub-ready Markdown formatting.
