Update 11. Nmap Scanning Workflow.md

--- a/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
+++ b/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
@@ -7,9 +7,9 @@ Nmap (Network Mapper) is a powerful open-source tool used for scanning networks,
 
 ## **1. Ping the Host (Host Discovery)**
 
-**Purpose:** To check if the target system is online before performing deeper scans, avoiding wasted time and reducing unnecessary noise on the network.
+- **Purpose:** To check if the target system is online before performing deeper scans, avoiding wasted time and reducing unnecessary noise on the network.
 
-**How It Works:**
+- **How It Works:**
 Nmap sends specific packets to the target to elicit a response. If the host responds, it’s marked as “alive” and included in further scanning.
 
 **Common Host Discovery Methods:**
