Update 10. TCP Three-way-handshake.md

--- a/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
+++ b/4. Network Reconnaissance Scanning/10. TCP Three-way-handshake.md
@@ -4,7 +4,7 @@
  > The TCP three-way handshake is the fundamental mechanism used to establish a reliable TCP connection between a client and a server. It ensures both sides are synchronized and ready to communicate.
 
 <div align="center">
-  <img src="https://raw.githubusercontent.com/nikhilpatidar01/Ethical-Hacking/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP%20Three%20way%20handshake.jpg" alt="TCP Three-Way Handshake" width="800">
+  <img src="https://github.com/nikhilpatidar01/Ethical-Hacking/blob/Master/4.%20Network%20Reconnaissance%20Scanning/Image/TCP%20Three%20way%20handshake.jpg" alt="TCP Three-Way Handshake">
 </div>
 
 ---
