--- a/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
+++ b/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
@@ -18,62 +18,74 @@ Nmap sends specific packets to the target to elicit a response. If the host resp
 
    * Sends ARP requests at Layer 2.
    * Works only on the local subnet.
-   * Fast and reliable for LAN scanning.
-   * Example:
-
+   * Fast and reliable for LAN(Private IP) scanning.
+   * Nmap uses ARP packets instead of ICMP in local networks.
+  * Example:
+    > Verbose Mode = -v 
+      ```
+     nmap -v 10.93.53.145
      ```
-     nmap -PR 192.168.1.0/24
-     ```
 
-2. **ICMP Ping** (Internet Reachability Test)
+2. **ICMP Ping** (Over the LAN)
 
    * Uses Echo Request packets (like the `ping` command).
    * Can be blocked by firewalls, so not always reliable.
+   * Nmap uses ICMP echo requests to check if the host is up. 
    * Example:
-
      ```
-     nmap -PE target.com
+     nmap -v 8.8.8.8
+     ```
+     > Port Scan = -p
+     ```
+     nmap -v -p 4455 8.8.8.1
      ```
 
 3. **TCP Ping**
 
    * Sends SYN packets to common ports (e.g., 80, 443).
    * Useful when ICMP is blocked.
-   * Example:
-
+   * Nmap can fall back ICMP and ARP ping to TCP or UDP ping to check host availability.
+   * Example: TCP SYN Ping on port 80
+    > TCP SYN Ping = -PS
      ```
-     nmap -PS80,443 target.com
+     nmap -v -PS -p 80 8.8.8.8
      ```
 
 4. **UDP Ping**
 
    * Sends UDP packets to random ports to check responses.
    * May trigger ICMP “port unreachable” messages, indicating the host is alive.
-   * Example:
-
+   * Nmap can fall back ICMP and ARP ping to TCP or UDP ping to check host availability.
+   * Example: UDP Ping on port 53 (DNS)
+   > UDP Ping = -PU
      ```
-     nmap -PU target.com
+     nmap -v -PU -p 53 8.8.8.8    
      ```
 
 ---
 
-## **2. Check the PTR Record (Reverse DNS Lookup)**
+## **2. PTR Record (Reverse DNS Lookup) Check**
 
-**Purpose:** To identify the domain name associated with an IP address.
+**Purpose:** PTR records are used to resolve an IP address back to a domain name.
+Nmap can perform reverse DNS lookups during scans.
 **Why It’s Important:**
 
 * Reveals target naming conventions.
 * Can expose the organization or system role (e.g., `mail.example.com`).
 * Helps in mapping network topology.
-
-**How to Perform:**
+* Example: 
 
 ```
-nmap -sL target.com
+nmap -v armourinfosec.com
 ```
+**Process:-**
+- Domain → A/AAAA record → IP address
+- IP → PTR record → Domain name
 
-*(Lists targets and performs reverse DNS lookups without scanning ports)*
-
+- Wireshark Filter Example (to capture PTR lookup traffic):
+```
+ip.addr == 8.8.8.8 && udp.port == 53
+```
 ---
 
 ## **3. Port Scanning (Default Top Common 1000 Ports)**
@@ -92,11 +104,9 @@ nmap -sL target.com
 4. **Full Port Range (-p-)** — Checks all 65,535 ports.
 
 **Example:**
-
 ```
 nmap -sS -p- target.com
 ```
-
 ---
 
 ## **4. Service and Version Detection**
@@ -106,11 +116,10 @@ nmap -sS -p- target.com
 
 * Identifies outdated or vulnerable software.
 * Helps tailor attacks or audits to specific versions.
-
 **Example:**
-
+> Version Detection = -sV
 ```
-nmap -sV target.com
+nmap -v -sV armourinfosec.com
 ```
 
 **How It Works:**
@@ -127,30 +136,23 @@ nmap -sV target.com
 
 * Reveals attack surfaces specific to that OS.
 * Helps in vulnerability mapping.
-
 **Example:**
-
+> OS Detection = -O
 ```
-nmap -O target.com
+nmap -O armourinfosec.com
 ```
-
 **How It Works:**
-
 * Sends multiple TCP, UDP, and ICMP probes.
 * Compares timing, flags, and response behavior to an OS fingerprint database.
 
 ---
 
 ## **6. Save the Output**
-
 **Purpose:** To document results for analysis, reporting, or future comparison.
-
 **Formats Supported:**
-
 * **Normal Output** — Human-readable.
 * **XML Output** — For importing into other tools.
 * **Grepable Output** — For filtering with command-line tools.
-
 **Examples:**
 
 ```
@@ -164,18 +166,10 @@ nmap -oG results.gnmap target.com
 ## **7. Optional: Aggressive Scan for Maximum Info**
 
 Combines multiple scanning features in one command:
-
+> Aggressive Scan (Advance Scan) = -A
 ```
-nmap -A target.com
+nmap -A armourinfosec.com
 ```
-
-Includes:
-
-* OS detection
-* Version detection
-* Script scanning
-* Traceroute
-
 ---
 
 
