--- a/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
+++ b/4. Network Reconnaissance Scanning/11. Nmap Scanning Workflow.md
@@ -20,18 +20,23 @@ Nmap sends specific packets to the target to elicit a response. If the host resp
    * Works only on the local subnet.
    * Fast and reliable for LAN(Private IP) scanning.
    * Nmap uses ARP packets instead of ICMP in local networks.
-  * Example:
-    > Verbose Mode = -v 
-      ```
-     nmap -v 10.93.53.145
-     ```
+  
+   Example:
 
-2. **ICMP Ping** (Over the LAN)
+   > Verbose Mode = -v 
+
+   ```
+     nmap -v 10.93.53.145
+   ```
+
+3. **ICMP Ping** (Over the LAN)
 
    * Uses Echo Request packets (like the `ping` command).
    * Can be blocked by firewalls, so not always reliable.
    * Nmap uses ICMP echo requests to check if the host is up. 
-   * Example:
+
+   Example:
+
      ```
      nmap -v 8.8.8.8
      ```
@@ -40,27 +45,32 @@ Nmap sends specific packets to the target to elicit a response. If the host resp
      nmap -v -p 4455 8.8.8.1
      ```
 
-3. **TCP Ping**
+5. **TCP Ping**
 
    * Sends SYN packets to common ports (e.g., 80, 443).
    * Useful when ICMP is blocked.
    * Nmap can fall back ICMP and ARP ping to TCP or UDP ping to check host availability.
-   * Example: TCP SYN Ping on port 80
-    > TCP SYN Ping = -PS
-     ```
-     nmap -v -PS -p 80 8.8.8.8
-     ```
 
-4. **UDP Ping**
+ Example: TCP SYN Ping on port 80
+
+  > TCP SYN Ping = -PS
+    
+  ```
+     nmap -v -PS -p 80 8.8.8.8
+  ```
+
+7. **UDP Ping**
 
    * Sends UDP packets to random ports to check responses.
    * May trigger ICMP “port unreachable” messages, indicating the host is alive.
    * Nmap can fall back ICMP and ARP ping to TCP or UDP ping to check host availability.
-   * Example: UDP Ping on port 53 (DNS)
-   > UDP Ping = -PU
-     ```
-     nmap -v -PU -p 53 8.8.8.8    
-     ```
+ Example: UDP Ping on port 53 (DNS)
+
+> UDP Ping = -PU
+
+```
+nmap -v -PU -p 53 8.8.8.8
+```
 
 ---
 
@@ -73,11 +83,13 @@ Nmap can perform reverse DNS lookups during scans.
 * Reveals target naming conventions.
 * Can expose the organization or system role (e.g., `mail.example.com`).
 * Helps in mapping network topology.
-* Example: 
+
+Example: 
 
 ```
 nmap -v armourinfosec.com
 ```
+
 **Process:-**
 - Domain → A/AAAA record → IP address
 - IP → PTR record → Domain name
@@ -105,7 +117,7 @@ ip.addr == 8.8.8.8 && udp.port == 53
 
 **Example:**
 ```
-nmap -sS -p- target.com
+nmap -sS -p- armourinfosec.com
 ```
 ---
 
@@ -116,8 +128,11 @@ nmap -sS -p- target.com
 
 * Identifies outdated or vulnerable software.
 * Helps tailor attacks or audits to specific versions.
-**Example:**
+
+Example:
+
 > Version Detection = -sV
+
 ```
 nmap -v -sV armourinfosec.com
 ```
@@ -136,8 +151,10 @@ nmap -v -sV armourinfosec.com
 
 * Reveals attack surfaces specific to that OS.
 * Helps in vulnerability mapping.
-**Example:**
+Example:
+
 > OS Detection = -O
+
 ```
 nmap -O armourinfosec.com
 ```
@@ -153,12 +170,13 @@ nmap -O armourinfosec.com
 * **Normal Output** — Human-readable.
 * **XML Output** — For importing into other tools.
 * **Grepable Output** — For filtering with command-line tools.
-**Examples:**
+
+Examples:
 
 ```
-nmap -oN results.txt target.com
-nmap -oX results.xml target.com
-nmap -oG results.gnmap target.com
+nmap -oN results.txt armourinfosec.com
+nmap -oX results.xml armourinfosec.com
+nmap -oG results.gnmap armourinfosec.com
 ```
 
 ---
@@ -175,7 +193,7 @@ nmap -A armourinfosec.com
 
 ### **Nmap Scanning Workflow – Quick Summary**
 
-Nmap (Network Mapper) is a free, open-source tool for scanning networks, finding vulnerabilities, and gathering target information. A proper scan follows a step-by-step approach for accuracy and stealth:
+> Nmap (Network Mapper) is a free, open-source tool for scanning networks, finding vulnerabilities, and gathering target information. A proper scan follows a step-by-step approach for accuracy and stealth:
 
 1. **Host Discovery (Ping Scan)** – Check if the target is online using ARP, ICMP, TCP, or UDP ping.
 2. **Reverse DNS Lookup (PTR Record)** – Find the domain name linked to the IP.
@@ -188,7 +206,7 @@ Nmap (Network Mapper) is a free, open-source tool for scanning networks, finding
 **Example full scan:**
 
 ```
-nmap -PR -sS -p- -sV -O -oN scan_results.txt target.com
+nmap -PR -sS -p- -sV -O -oN scan_results.txt armourinfosec.com
 ```
 
 ---
