--- a/1. Information Security/01. Information Security.md
+++ b/1. Information Security/01. Information Security.md
@@ -749,3 +749,6 @@ Vulnerability Assessment is a **crucial part** of any cybersecurity strategy. It
 ---
 
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma (Armour Infosec - https://www.armourinfosec.com/) and enriched with further improvements and updates.
+
+
