Update 02. Penetration Testing.md

--- a/1. Information Security/02. Penetration Testing.md
+++ b/1. Information Security/02. Penetration Testing.md
@@ -307,3 +307,4 @@ Tests the physical security of premises and hardware:
 
 
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
