Update 03. Penetration Testing Methodologies.md

--- a/1. Information Security/03. Penetration Testing Methodologies.md
+++ b/1. Information Security/03. Penetration Testing Methodologies.md
@@ -80,3 +80,5 @@ Penetration testing can be conducted using various approaches depending on the d
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
