--- a/1. Information Security/04. Phases of Penetration Testing.md
+++ b/1. Information Security/04. Phases of Penetration Testing.md
@@ -134,3 +134,4 @@ Planning → Reconnaissance → Vulnerability Analysis → Exploitation → Post
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
