Update 05. Scope of Penetration Testing.md

--- a/1. Information Security/05. Scope of Penetration Testing.md
+++ b/1. Information Security/05. Scope of Penetration Testing.md
@@ -190,3 +190,7 @@ Operational procedures must be clearly defined:
 
 * Tesla: [https://bugcrowd.com/tesla](https://bugcrowd.com/tesla)
 * SpaceX: [https://bugcrowd.com/spacex](https://bugcrowd.com/spacex)
+
+---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
