--- a/1. Information Security/06. Bug Bounty.md
+++ b/1. Information Security/06. Bug Bounty.md
@@ -90,3 +90,5 @@ summary of the **key differences between Bug Bounty and Penetration Testing** ba
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
