Update 07. Red, Blue, PurpIe Team.md

--- a/1. Information Security/07. Red, Blue, PurpIe Team.md
+++ b/1. Information Security/07. Red, Blue, PurpIe Team.md
@@ -78,4 +78,5 @@ Coordinating exercises where the Red Team shares attack techniques and the Blue 
 | **Goal**   | Find vulnerabilities | Strengthen security    | Optimize overall security posture |
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
