Update 08. Security Threats.md

--- a/1. Information Security/08. Security Threats.md
+++ b/1. Information Security/08. Security Threats.md
@@ -183,4 +183,5 @@ Thousands of computers send traffic together to crash the system.
 | Emerging Threats       | AI, deepfakes, quantum risks              |
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
