--- a/1. Information Security/09. Classification of Security Threats.md
+++ b/1. Information Security/09. Classification of Security Threats.md
@@ -110,4 +110,5 @@ Risks posed by human actions, either intentional or accidental.
 * Maintain **clear guidelines** for handling sensitive data.
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
