Update 10. CIA Triad.md

--- a/1. Information Security/10. CIA Triad.md
+++ b/1. Information Security/10. CIA Triad.md
@@ -168,4 +168,5 @@ The **CIA Triad** is a fundamental security model that guides policies for infor
 * **Impact**: Code execution with the privileges of the user who opens the document
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
