--- a/1. Information Security/11. Defense in Depth (DiD).md
+++ b/1. Information Security/11. Defense in Depth (DiD).md
@@ -164,3 +164,4 @@ Ensures services can continue or recover after failure.
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
