Update 12. Chief Information Security Officer (CISO).md

--- a/1. Information Security/12. Chief Information Security Officer (CISO).md
+++ b/1. Information Security/12. Chief Information Security Officer (CISO).md
@@ -97,4 +97,5 @@ In practice, this responsibility is typically assumed by the **CISO**.
   * **ISO 27001 Lead Implementer / Auditor**
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
