--- a/1. Information Security/15. CERT In.md
+++ b/1. Information Security/15. CERT In.md
@@ -68,3 +68,5 @@
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma Sir ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
