Update 03. Katana Modern Web Crawler.md

--- a/2. Reconnaissance (Footprinting)/03. Katana Modern Web Crawler.md
+++ b/2. Reconnaissance (Footprinting)/03. Katana Modern Web Crawler.md
@@ -105,3 +105,4 @@ cat armourinfosec.com-katana-output.txt | grep '\.js' | cut -d '?' -f 1 | sort |
 ```
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
