Update 04. Waybackurls Archived URL Extractor.md

--- a/2. Reconnaissance (Footprinting)/04. Waybackurls Archived URL Extractor.md
+++ b/2. Reconnaissance (Footprinting)/04. Waybackurls Archived URL Extractor.md
@@ -170,4 +170,5 @@ cat armourinfosec.com-httpx-output.txt | grep -v "Page not found"
 ```
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
