--- a/2. Reconnaissance (Footprinting)/07. Content Delivery Network (CDN).md
+++ b/2. Reconnaissance (Footprinting)/07. Content Delivery Network (CDN).md
@@ -230,3 +230,4 @@ These tools provide a full tech stack analysis, including whether a CDN is in us
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
