Update 12. CDN Bypass - Techniques .md

--- a/2. Reconnaissance (Footprinting)/12. CDN Bypass - Techniques .md
+++ b/2. Reconnaissance (Footprinting)/12. CDN Bypass - Techniques .md
@@ -126,4 +126,5 @@ Check for `.env`, `.git`, or internal server config files available through misc
 * 📡 Regularly scan infrastructure for exposed ports, misconfigs, and old records
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
 
