Update 13. Reverse IP Domain Lookup.md

--- a/2. Reconnaissance (Footprinting)/13. Reverse IP Domain Lookup.md
+++ b/2. Reconnaissance (Footprinting)/13. Reverse IP Domain Lookup.md
@@ -68,3 +68,4 @@ dig +short example.com
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
