Update 14. Reverse Mail Server Lookup.md

--- a/2. Reconnaissance (Footprinting)/14. Reverse Mail Server Lookup.md
+++ b/2. Reconnaissance (Footprinting)/14. Reverse Mail Server Lookup.md
@@ -95,3 +95,5 @@ I can code a clean script (in Python or Bash) to:
 > Just say "**deploy the script**" and I’ll spin it up faster than a cronjob on coffee ☕💻
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
