Update 15. Reverse Name Server (NS) Lookup.md

--- a/2. Reconnaissance (Footprinting)/15. Reverse Name Server (NS) Lookup.md
+++ b/2. Reconnaissance (Footprinting)/15. Reverse Name Server (NS) Lookup.md
@@ -108,3 +108,4 @@ Just say “**deploy it**” and I’ll spin it up in Python, Bash, or anything 
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
