--- a/2. Reconnaissance (Footprinting)/21. LeakIX Recon.md
+++ b/2. Reconnaissance (Footprinting)/21. LeakIX Recon.md
@@ -113,3 +113,6 @@ Register to unlock pro features:
   * Python + LeakIX API (when released) for automation
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
