--- a/2. Reconnaissance (Footprinting)/22. FOFA Recon.md
+++ b/2. Reconnaissance (Footprinting)/22. FOFA Recon.md
@@ -142,3 +142,4 @@ You can also add flags like:
 * 🐍 Python + FOFA API → Automate weekly recon
 
 ---
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
