--- a/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
+++ b/2. Reconnaissance (Footprinting)/23. GitHub Recon.md
@@ -421,5 +421,7 @@ Pair **Wraith** with other recon tools for maximum coverage:
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
+
 
 
