--- a/2. Reconnaissance (Footprinting)/31. Maltego and SpiderFoot.md
+++ b/2. Reconnaissance (Footprinting)/31. Maltego and SpiderFoot.md
@@ -65,3 +65,4 @@ python3 sf.py -s example.com -t domain --no-browser
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
