--- a/2. Reconnaissance (Footprinting)/30. People Search & OSINT Tools.md
+++ b/2. Reconnaissance (Footprinting)/30. People Search & OSINT Tools.md
@@ -109,3 +109,5 @@
 * 💥 Linking domain-IP-email-chain using passive recon
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
