--- a/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
+++ b/2. Reconnaissance (Footprinting)/28. Email Header Analysis.md
@@ -167,3 +167,5 @@ These tools track when the email is opened, the recipient’s device, IP address
 | ❌ Avoid online tools? | Analyze completely offline with `.eml` in Notepad  |
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
