Update 27. Email Tracking & Protocols.md

--- a/2. Reconnaissance (Footprinting)/27. Email Tracking & Protocols.md
+++ b/2. Reconnaissance (Footprinting)/27. Email Tracking & Protocols.md
@@ -181,3 +181,5 @@ by mail.yourdomain.com with SMTP; Thu, 1 Jul 2025 +0530
 * Timestamp shows delivery timeline
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
