Update 26. IP Logger.md

--- a/2. Reconnaissance (Footprinting)/26. IP Logger.md
+++ b/2. Reconnaissance (Footprinting)/26. IP Logger.md
@@ -217,3 +217,5 @@ nano .htaccess
 This will block log.html and gps-log.html from direct access via browser — smart for stealth setups. ✅
 
 ---
+
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
