--- a/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
+++ b/4. Network Reconnaissance Scanning/01. Penetration Testing Lab Resources.md
@@ -101,4 +101,4 @@ Level up your hacking lab game with these expert-backed insights:
   * 🧱 **MITRE ATT\&CK** – For mapping real-world TTPs
 
 ---
-
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
