--- a/4. Network Reconnaissance Scanning/04. Arping.md
+++ b/4. Network Reconnaissance Scanning/04. Arping.md
@@ -172,3 +172,4 @@ done
 ---
 
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
