--- a/4. Network Reconnaissance Scanning/05. fping.md
+++ b/4. Network Reconnaissance Scanning/05. fping.md
@@ -173,3 +173,4 @@ fping -g 122.168.84.1/24 -a -R -i 10000
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
