--- a/4. Network Reconnaissance Scanning/06. hping3.md
+++ b/4. Network Reconnaissance Scanning/06. hping3.md
@@ -287,3 +287,4 @@ hping3 -X 192.168.129.145
 
 ---
 
+📖 Reference: Notes inspired by guidance from Mr. Sachin Verma ([Armour Infosec](https://www.armourinfosec.com/)) and enriched with further improvements and updates.
